--- a/index.html
+++ b/index.html
@@ -1,88 +1,81 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>code school</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <!-- <h1>hello world</h1>
-    <h2>hello world</h2>
-    <h3>hello world</h3>
-    <h4>hello world</h4>
-    <h5>hello world</h5>
-    <h6>hello world</h6>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, suscipit!
-      Ullam beatae soluta voluptas quod magnam rerum molestiae eaque est
-      inventore? Numquam fugiat eos molestiae quam facilis, similique et ipsam
-      voluptas, a non accusantium, porro deleniti dolores temporibus quasi
-      repellat dolor saepe incidunt minima tempora consectetur provident
-      necessitatibus nesciunt maxime.
-    </p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Khadija Ibrahim Project</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-    <ul>
-      <li>monday</li>
-      <li>tuesday</li>
-      <li>wednesday</li>
-      <li>thursday</li>
-      <li>friday</li>
-      <li>saturday</li>
-      <li>sunday</li>
-    </ul>
-    <ol type="1">
-      <li>monday</li>
-      <li>tuesday</li>
-      <li>wednesday</li>
-      <li>thursday</li>
-      <li>friday</li>
-      <li>saturday</li>
-      <li>sunday</li>
-    </ol>
-    <ol type="A">
-      <li>monday</li>
-      <li>tuesday</li>
-      <li>wednesday</li>
-      <li>thursday</li>
-      <li>friday</li>
-      <li>saturday</li>
-      <li>sunday</li>
-    </ol>
-    <ol type="a">
-      <li>monday</li>
-      <li>tuesday</li>
-      <li>wednesday</li>
-      <li>thursday</li>
-      <li>friday</li>
-      <li>saturday</li>
-      <li>sunday</li>
-    </ol>
-    <ol type="]">
-      <li>monday</li>
-      <li>tuesday</li>
-      <li>wednesday</li>
-      <li>thursday</li>
-      <li>friday</li>
-      <li>saturday</li>
-      <li>sunday</li>
-    </ol>
-    <ol type="i">
-      <li>monday</li>
-      <li>tuesday</li>
-      <li>wednesday</li>
-      <li>thursday</li>
-      <li>friday</li>
-      <li>saturday</li>
-      <li>sunday</li>
-    </ol>
 
-    <img
-      src="https://images.unsplash.com/photo-1607274134639-043342705e6f?q=80&w=386&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-      alt="lion in the jungle"
-    />
- -->
-    <div class="user-con"></div>
+<body>
+    <div class="recipe-finder-container">
+        <h1>Recipes Finder</h1>
+        <form id="search-form" class="search-box">
+            <input type="text" id="search-input" placeholder="search by name (eg. 'potato')">
+            <button type="submit" id="search-button">Search</button>    
+        </form>
+        
+        
+        <div class="random-button-container">
+            <button id="random-button" class="random-button">Get Random Recipes</button>
+        </div>
 
-    <!-- <script src="./index.js"></script> -->
-    <script type="module" src="./learnJson.js"></script>
-  </body>
+
+        <div class="message " id="message-area">Search for a recipe or click to get a random one</div>
+        <div class="results-grid" id="results-grid">
+
+             <div class="recipe-item">
+                <img src="1744013163835.jpg" alt="Pancake">
+                <h3>Pancake</h3>
+            </div>
+        </div>
+        <div class="recipe-item">
+                <img src="1744013163835.jpg" alt="Pancake">
+                <h3>Pancake</h3>
+            </div>
+        </div> <div class="recipe-item">
+                <img src="1744013163835.jpg" alt="Pancake">
+                <h3>Pancake</h3>
+            </div>
+        </div> 
+        <div class="recipe-item">
+                <img src="1744013163835.jpg" alt="Pancake">
+                <h3>Pancake</h3>
+            </div>
+        </div>  
+
+
+                <!-- <h2>Pancake</h2>
+                <img src="1744013163835.jpg" alt="Pancake">
+                <h3>Category: Dessert</h3>
+                <h3>Category: Dessert</h3>
+                <h3>Category: Dessert</h3>
+
+                <ul>
+                    <li>100g flour</li>
+                    <li>2 large eggs</li>
+                    <li>sugar</li>
+                    <li>300mg milk</li>
+                    <li>to serve honey</li>    
+                </ul>
+                <h3>Instructions</h3>
+                <p>Put the flour, eggs, milk, 1 tbsp oil and a pinch of salt into a bowl or large jug, then whisk to a smooth batter.
+                    Set aside for 30 mins to rest if you have time, or start cooking straight away.
+                    Set a medium frying pan or crêpe pan over a medium heat and carefully wipe it with some oiled kitchen paper.
+                    When hot, cook your pancakes for 1 min on each side until golden, keeping them warm in a low oven as you go.
+                    Serve with lemon wedges and sugar, or your favourite filling.
+                    Once cold, you can layer the pancakes between baking parchment, then wrap in cling film and freeze for up to 2 months.
+                    </p> -->
+
+                <!-- <h3>Recipe Source</h3>
+                  <div class="recipe-site">
+                    <a href="https://www.bbcgoodfood.com/recipes/2907669/easy-pancakes" target="_blank">Click to view site</a>
+                  </div>   -->
+
+            </div>
+        </div>
+    </div>
+   <script src="script.js"></script> 
+</body>
 </html>
